Fix syntax for dark mode color in sort button styles

--- a/app/assets/stylesheets/components/_buttons.scss
+++ b/app/assets/stylesheets/components/_buttons.scss
@@ -206,8 +206,8 @@ form .flex-auto + input[type='submit'] {
   font-weight: 600;
   transition: color 0.125s ease-in-out;
   gap: 0.5rem;
-  
-  [data-dark="true"] & {
+
+  [data-dark='true'] & {
     color: map-get($palette, white);
   }
 
